--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "prisma generate && prisma migrate deploy && vite build",
+		"build": "prisma generate && prisma db push && vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -19,7 +19,8 @@
 		"db:reset": "npx prisma db push --force-reset && npm run db:seed",
 		"db:generate": "npx prisma generate",
 		"db:studio": "npx prisma studio",
-        "postinstall": "prisma generate"
+        "postinstall": "prisma generate",
+		"vercel-build": "prisma generate && prisma db push && npm run db:seed && vite build"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
